feat: validate user's password length and prohibit to create multiple users for single organization
