# swagger.yaml
@@ -127,10 +127,6 @@ paths:
                                     type: string
                                     description: 계정 이메일
                                     example: boa2023@kaist.ac.kr
-                                password:
-                                    type: string
-                                    description: 계정 비밀번호
-                                    example: password
             responses:
                 '200': # status code
                     content:
@@ -139,6 +135,15 @@ paths:
                                 $ref: '#/components/schemas/User'
                 '404': # status code
                     description: Organization not found
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    message:
+                                        type: string
+                '409':
+                    description: User with same organization already exists
                     content:
                         application/json:
                             schema:
